# univer_project

./: .gitignore  README.md  alembic.ini  item.json  main.json  main.py  main2.json  meta2.json  pyproject.toml  requirements.txt
db/: db_conf.py
logs/: logs_config.py
migration/: env.py
migration/versions/: 1e74bc7464c9_.py  29da8abcb4e6_add_invoice_1.py  30666042f2a4_card_user.py  356127333156_add_invoice.py  4a39cbaedb75_.py  60269144dd97_card.py  624217657b47_.py  9b894e353c0c_add_token.py  a205c535d47c_add_amount.py  b5a5b01a6efd_.py  c516c2397e01_.py  c733ffca4898_add_invoice_card.py  f57b8eca53b6_.py
models/: __init__.py  card.py  invoice.py  ping.py  user.py
schemas/request_schemas/: card_request.py  ping_schema.py
